improved tests with DTO