@@ -6,6 +6,8 @@ import pl.wylegala.ideas.category.dto.CategoryDto;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collector;
+import java.util.stream.Collectors;
 
 @Component
 public class CategoryMapper {
@@ -27,8 +29,7 @@ public class CategoryMapper {
     public List<CategoryDto> mapDtoList(List<Category> categories) {
         return categories.stream()
                 .map(this::mapDto)
-                .toList();
-
+                .collect(Collectors.toList());
     }
 
 }
